--- a/.gitignore
+++ b/.gitignore
@@ -158,3 +158,17 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
+
+# Config files used for testing
+caddy_config/caddyfile.json
+wgcf/wgcf
+wgcf/wgcf-account.toml
+wgcf/wgcf-profile.conf
+xray_config/xray_client_qr_code.png
+xray_config/xray_config.json
+xray_core/LICENSE
+xray_core/README.md
+xray_core/geoip.dat
+xray_core/geosite.dat
+xray_core/xray
