--- a/.github/workflows/docker-multiplatform-build.yaml
+++ b/.github/workflows/docker-multiplatform-build.yaml
@@ -9,6 +9,10 @@ jobs:
   docker:
     runs-on: ubuntu-latest
     steps:
+      - name: Get the current date
+        run: | 
+          echo "CURRENT_DATE=$(date "+%Y-%m-%d")" >> $GITHUB_ENV
+
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
@@ -26,4 +30,6 @@ jobs:
         with:
           platforms: linux/amd64,linux/arm64
           push: true
-          tags: ${{ vars.DOCKERHUB_USERNAME }}/xray-warp:latest
+          tags: |
+            ${{ vars.DOCKERHUB_USERNAME }}/xray-warp:latest
+            ${{ vars.DOCKERHUB_USERNAME }}/xray-warp:${ env.CURRENT_DATE }
