--- a/.github/workflows/docker-multiplatform-build-dev.yaml
+++ b/.github/workflows/docker-multiplatform-build-dev.yaml
@@ -28,7 +28,7 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v6
         with:
-          platforms: linux/amd64,linux/arm64
+          platforms: linux/amd64
           push: true
           tags: |
             ${{ vars.DOCKERHUB_USERNAME }}/${{ secrets.DOCKERHUB_REGISTRY }}:xray-warp-staging
