Resolving git merge conflict

--- a/.github/workflows/docker-multiplatform-build-dev.yaml
+++ b/.github/workflows/docker-multiplatform-build-dev.yaml
@@ -1,9 +1,9 @@
-name: docker-multiplatform-build
+name: docker-multiplatform-build-dev
 
 on:
   push:
     branches:
-      - "main"
+      - "dev"
 
 jobs:
   docker:
@@ -28,8 +28,8 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v6
         with:
-          platforms: linux/amd64,linux/arm64
+          platforms: linux/arm64, linux/amd64
           push: true
           tags: |
-            ${{ vars.DOCKERHUB_USERNAME }}/xray-warp:latest
-            ${{ vars.DOCKERHUB_USERNAME }}/xray-warp:${{ env.CURRENT_DATE }}
+            ${{ vars.DOCKERHUB_USERNAME }}/${{ secrets.DOCKERHUB_REGISTRY }}:xray-warp-staging
+            ${{ vars.DOCKERHUB_USERNAME }}/${{ secrets.DOCKERHUB_REGISTRY }}:xray-warp-staging-${{ env.CURRENT_DATE }}
