--- a/.github/workflows/docker-multiplatform-build-dev.yaml
+++ b/.github/workflows/docker-multiplatform-build-dev.yaml
@@ -8,6 +8,7 @@ on:
 jobs:
   docker:
     runs-on: ubuntu-latest
+    if: "contains(github.event.head_commit.message, 'dev-build:')"
     steps:
       - name: Get the current date
         run: | 
