trying to add cache to the workflow files to see if build time is reduced

--- a/.github/workflows/docker-multiplatform-build.yaml
+++ b/.github/workflows/docker-multiplatform-build.yaml
@@ -34,3 +34,5 @@ jobs:
           tags: |
             ${{ vars.DOCKERHUB_USERNAME }}/xray-warp:latest
             ${{ vars.DOCKERHUB_USERNAME }}/xray-warp:${{ env.CURRENT_DATE }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
