--- a/.github/workflows/docker-multiplatform-build-dev.yaml
+++ b/.github/workflows/docker-multiplatform-build-dev.yaml
@@ -34,3 +34,5 @@ jobs:
           tags: |
             ${{ vars.DOCKERHUB_USERNAME }}/${{ secrets.DOCKERHUB_REGISTRY }}:xray-warp-staging
             ${{ vars.DOCKERHUB_USERNAME }}/${{ secrets.DOCKERHUB_REGISTRY }}:xray-warp-staging-${{ env.CURRENT_DATE }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
