adding the description field for the main workflow when building docker images

--- a/.github/workflows/docker-multiplatform-build.yaml
+++ b/.github/workflows/docker-multiplatform-build.yaml
@@ -1,9 +1,12 @@
 name: docker-multiplatform-build
 
 on:
-  push:
-    branches:
-      - "main"
+  workflow_dispatch:
+    inputs:
+      description:
+        description: 'Description'
+        required: true
+        type: string
 
 jobs:
   docker:
