added better xray config handeling with recursive function to update json keys, also changed the caddyfile from json drilling to template subsititution

--- a/.gitignore
+++ b/.gitignore
@@ -161,15 +161,11 @@ cython_debug/
 
 
 # Config files used for testing
-caddy_config/caddyfile.json
-wgcf/wgcf
-wgcf/wgcf-account.toml
-wgcf/wgcf-profile.conf
-xray_config/xray_client_qr_code.png
-xray_config/xray_config.json
-xray_core/LICENSE
-xray_core/README.md
-xray_core/geoip.dat
-xray_core/geosite.dat
-xray_core/xray
-xray_config/vless_link.txt
+caddy_config/*
+!caddy_config/.gitkeep
+wgcf/*
+!wgcf/.gitkeep
+xray_config/*
+!xray_config/.gitkeep
+xray_core/*
+!xray_core/.gitkeep
