--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,20 @@
 annotated-types==0.7.0
-anyio==4.8.0
-certifi==2025.1.31
-cloudflare==4.0.0
+anyio==4.11.0
+build==1.3.0
+certifi==2025.10.5
+click==8.3.0
+cloudflare==4.3.1
 distro==1.9.0
-h11==0.14.0
-httpcore==1.0.7
+h11==0.16.0
+httpcore==1.0.9
 httpx==0.28.1
 idna==3.10
-pydantic==2.10.6
-pydantic_core==2.27.2
-segno==1.6.1
+packaging==25.0
+pip-tools==7.5.1
+pydantic==2.12.0
+pydantic_core==2.41.1
+pyproject_hooks==1.2.0
+segno==1.6.6
 sniffio==1.3.1
-typing_extensions==4.12.2
+typing-inspection==0.4.2
+typing_extensions==4.15.0
