refactor: improve code readability and fix Xray Core/WGCF download handling
- Refactored code to make it more readable and organized (moved some variables, improved structure)
- Fixed bug where failed Xray Core download would remove an existing version, preventing container startup
- Ensures container now starts reliably even if a download fails, avoiding accidental lockout in censored environments

--- a/templates/xray_config_template.json
+++ b/templates/xray_config_template.json
@@ -27,6 +27,11 @@
     ],
     "outbounds": [
         {
+            "protocol": "freedom",
+            "settings": {},
+            "tag": "DIRECT"
+        },
+        {
             "protocol": "blackhole",
             "settings": {},
             "tag": "BLOCK"
