--- a/.github/workflows/docker-multiplatform-build-dev.yaml
+++ b/.github/workflows/docker-multiplatform-build-dev.yaml
@@ -4,11 +4,11 @@ on:
   push:
     branches:
       - "dev"
-  workflow_dispatch:
 
 jobs:
   docker:
     runs-on: ubuntu-latest
+    if: "contains(github.event.head_commit.message, 'dev-build:')"
     steps:
       - name: Get the current date
         run: | 
