--- a/.github/workflows/docker-multiplatform-build-dev.yaml
+++ b/.github/workflows/docker-multiplatform-build-dev.yaml
@@ -8,6 +8,7 @@ on:
 
 jobs:
   docker:
+    if: github.event_name == "workflow_dispatch"
     runs-on: ubuntu-latest
     steps:
       - name: Get the current date
