--- a/.github/workflows/xray-warp-ct-staging-CI.yaml
+++ b/.github/workflows/xray-warp-ct-staging-CI.yaml
@@ -4,7 +4,7 @@ on:
   pull_request:
     types: [opened, synchronize, reopened]
     branches:
-      - main
+      - dev
 
 jobs:
   build-stage-image:
