--- a/.github/workflows/xray-warp-ct-staging.yaml
+++ b/.github/workflows/xray-warp-ct-staging.yaml
@@ -18,7 +18,7 @@ jobs:
   setup-staging-environment:
     uses: ./.github/workflows/actions/setup-environment-staging.yaml
     with:
-      CONFIG_DIRECTORY: "./tests/infrastructure"
+      CONFIG_DIRECTORY: ./tests/infrastructure
     secrets:
       TF_CLOUD_ORGANIZATION: ${{ secrets.TF_CLOUD_ORGANIZATION }}
       TF_API_TOKEN: ${{ secrets.TF_API_TOKEN }}
