--- a/.github/workflows/setup-environment-staging.yaml
+++ b/.github/workflows/setup-environment-staging.yaml
@@ -14,6 +14,12 @@ on:
       TF_WORKSPACE:
         required: True
 
+env:
+  TF_CLOUD_ORGANIZATION: ${{ secrets.TF_CLOUD_ORGANIZATION }}
+  TF_API_TOKEN: "${{ secrets.TF_API_TOKEN }}"
+  TF_WORKSPACE: ${{ secrets.TF_WORKSPACE }}
+  CONFIG_DIRECTORY: ${{ inputs.CONFIG_DIRECTORY }}
+
 jobs:
   terraform:
     name: "Terraform Apply"
@@ -28,7 +34,7 @@ jobs:
         uses: hashicorp/tfc-workflows-github/actions/upload-configuration@v1.0.0
         id: apply-upload
         with:
-          workspace: ${{ secrets.TF_WORKSPACE }}
+          workspace: ${{ env.TF_WORKSPACE }}
           directory: ${{ inputs.CONFIG_DIRECTORY }}
 
       - name: Create Apply Run
