--- a/.github/workflows/xray-warp-ct-staging.yaml
+++ b/.github/workflows/xray-warp-ct-staging.yaml
@@ -7,7 +7,7 @@ on:
       - dev
 
 jobs:
-  build-stage-image:
+  build-staging-image:
     uses: ./.github/workflows/build-staging.yaml
     with:
       DOCKERHUB_USERNAME: xia1997x
@@ -23,3 +23,4 @@ jobs:
       TF_CLOUD_ORGANIZATION: ${{ secrets.TF_CLOUD_ORGANIZATION }}
       TF_API_TOKEN: ${{ secrets.TF_API_TOKEN }}
       TF_WORKSPACE: ${{ secrets.TF_WORKSPACE }}
+    needs: [build-staging-image]
