--- a/.github/workflows/xray-warp-ct-staging.yaml
+++ b/.github/workflows/xray-warp-ct-staging.yaml
@@ -15,6 +15,16 @@ jobs:
     secrets:
       DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
 
+  destroy-staging-environment:
+    uses: ./.github/workflows/setup-environment-staging.yaml
+    with:
+      CONFIG_DIRECTORY: ./tests/infrastructure
+    secrets:
+      TF_CLOUD_ORGANIZATION: ${{ secrets.TF_CLOUD_ORGANIZATION }}
+      TF_API_TOKEN: ${{ secrets.TF_API_TOKEN }}
+      TF_WORKSPACE: ${{ secrets.TF_WORKSPACE }}
+    needs: [build-staging-image]
+
   setup-staging-environment:
     uses: ./.github/workflows/setup-environment-staging.yaml
     with:
