--- a/.github/workflows/xray-warp-ct-staging.yaml
+++ b/.github/workflows/xray-warp-ct-staging.yaml
@@ -32,4 +32,4 @@ jobs:
       TF_API_TOKEN: ${{ secrets.TF_API_TOKEN }}
       TF_WORKSPACE: ${{ secrets.TF_WORKSPACE }}
     needs: [build-staging-image, destroy-staging-environment]
-# test workflows
+# test workflow
