--- a/.github/workflows/xray-warp-ct-staging.yaml
+++ b/.github/workflows/xray-warp-ct-staging.yaml
@@ -14,7 +14,7 @@ jobs:
   destroy-staging-environment:
     uses: ./.github/workflows/destroy-environment-staging.yaml
     with:
-      CONFIG_DIRECTORY: ./tests/infrastructure
+      CONFIG_DIRECTORY: tests/infrastructure
     secrets:
       TF_API_TOKEN: ${{ secrets.TF_API_TOKEN }}
     needs: [build-staging-image]
