--- a/.github/workflows/xray-warp-ct-staging.yaml
+++ b/.github/workflows/xray-warp-ct-staging.yaml
@@ -17,7 +17,7 @@ jobs:
       CONFIG_DIRECTORY: tests/infrastructure
     secrets:
       TF_API_TOKEN: ${{ secrets.TF_API_TOKEN }}
-    needs: [build-staging-image]
+    #needs: [build-staging-image]
 
   setup-staging-environment:
     uses: ./.github/workflows/setup-environment-staging.yaml
