--- a/.github/workflows/destroy-environment-staging.yaml
+++ b/.github/workflows/destroy-environment-staging.yaml
@@ -16,11 +16,9 @@ env:
 jobs:
   terraform:
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: ${{ inputs.CONFIG_DIRECTORY }}
     steps:
       - uses: hashicorp/setup-terraform@v3
+      - run: cd ${{ inputs.CONFIG_DIRECTORY }}
       - run: terraform init
       - id: destroy
         run: terraform destroy --auto-approve
