--- a/.github/workflows/xray-warp-ct-staging.yaml
+++ b/.github/workflows/xray-warp-ct-staging.yaml
@@ -28,10 +28,11 @@ jobs:
     needs: [build-staging-image, destroy-staging-environment]
 
   check-xray-warp-ct-server-connectivity:
-    uses: ./.github/workflows/xray-warp-ct-connectivity check.yaml
+    uses: ./.github/workflows/xray-warp-ct-connectivity-check.yaml
     with:
       TESTS_DIRECTORY: tests
       XRAY_PATH: xray-warp-test-path
       XRAY_UUID: eefc8f5f-f2fe-43b5-881c-653994d5a617
     secrets:
       XRAY_HOST: ${{ secrets.XRAY_HOST }}
+    #needs: [setup-staging-environment]
