--- a/.github/workflows/xray-warp-ct-connectivity-check.yaml
+++ b/.github/workflows/xray-warp-ct-connectivity-check.yaml
@@ -28,4 +28,4 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
       - name: Start xray-warp-ct connectivity check
-        run: sh ./${{ inputs.TESTS_DIRECTORY }}/client_server_test.sh
+        run: bash ./${{ inputs.TESTS_DIRECTORY }}/client_server_test.sh
