--- a/.github/workflows/destroy-environment-staging.yaml
+++ b/.github/workflows/destroy-environment-staging.yaml
@@ -8,7 +8,7 @@ on:
         type: string
     secrets:
       TF_API_TOKEN:
-        required: True
+        required: False
 
 env:
   TF_TOKEN_app_terraform_io: "${{ secrets.TF_API_TOKEN }}"
