--- a/.github/workflows/xray-warp-ct-staging.yaml
+++ b/.github/workflows/xray-warp-ct-staging.yaml
@@ -3,29 +3,29 @@ name: xray-warp-ct staging CI/CD
 on: workflow_dispatch
 
 jobs:
-  build-staging-image:
-    uses: ./.github/workflows/build-staging.yaml
-    with:
-      DOCKERHUB_USERNAME: xia1997x
-      DOCKERHUB_REGISTRY: xray-warp-staging
-    secrets:
-      DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
+  #build-staging-image:
+  #  uses: ./.github/workflows/build-staging.yaml
+  #  with:
+  #    DOCKERHUB_USERNAME: xia1997x
+  #    DOCKERHUB_REGISTRY: xray-warp-staging
+  #  secrets:
+  #    DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
 
-  reset-staging-environment:
-    uses: ./.github/workflows/destroy-environment-staging.yaml
-    with:
-      CONFIG_DIRECTORY: tests/infrastructure
-    secrets:
-      TF_API_TOKEN: ${{ secrets.TF_API_TOKEN }}
-    needs: [build-staging-image]
+  #reset-staging-environment:
+  #  uses: ./.github/workflows/destroy-environment-staging.yaml
+  #  with:
+  #    CONFIG_DIRECTORY: tests/infrastructure
+  #  secrets:
+  #    TF_API_TOKEN: ${{ secrets.TF_API_TOKEN }}
+  #  needs: [build-staging-image]
 
-  setup-staging-environment:
-    uses: ./.github/workflows/setup-environment-staging.yaml
-    with:
-      CONFIG_DIRECTORY: tests/infrastructure
-    secrets:
-      TF_API_TOKEN: ${{ secrets.TF_API_TOKEN }}
-    needs: [build-staging-image, reset-staging-environment]
+  #setup-staging-environment:
+  #  uses: ./.github/workflows/setup-environment-staging.yaml
+  #  with:
+  #    CONFIG_DIRECTORY: tests/infrastructure
+  #  secrets:
+  #    TF_API_TOKEN: ${{ secrets.TF_API_TOKEN }}
+  #  needs: [build-staging-image, reset-staging-environment]
 
   check-xray-warp-ct-server-connectivity:
     uses: ./.github/workflows/xray-warp-ct-connectivity-check.yaml
@@ -35,7 +35,7 @@ jobs:
       XRAY_UUID: eefc8f5f-f2fe-43b5-881c-653994d5a617
     secrets:
       XRAY_HOST: ${{ secrets.XRAY_HOST }}
-    needs: [setup-staging-environment]
+    #needs: [setup-staging-environment]
 
   destroy-staging-environment:
     if: ${{ !cancelled() }}
