testing xray connectivity check workflow

--- a/.github/workflows/xray-warp-ct-staging.yaml
+++ b/.github/workflows/xray-warp-ct-staging.yaml
@@ -38,6 +38,7 @@ jobs:
     #needs: [setup-staging-environment]
 
   destroy-staging-environment:
+    if: ${{ !cancelled() }}
     uses: ./.github/workflows/destroy-environment-staging.yaml
     with:
       CONFIG_DIRECTORY: tests/infrastructure
