--- a/requirements.txt
+++ b/requirements.txt
@@ -10,9 +10,11 @@ httpcore==1.0.9
 httpx==0.28.1
 idna==3.10
 packaging==25.0
+pip-tools==7.5.1
 pydantic==2.12.0
 pydantic_core==2.41.1
 pyproject_hooks==1.2.0
+python-dotenv==1.1.1
 segno==1.6.6
 sniffio==1.3.1
 typing-inspection==0.4.2
