--- a/tests/infrastructure/xray_server_config/template.public.env
+++ b/tests/infrastructure/xray_server_config/template.public.env
@@ -1,9 +1,9 @@
-# ------------------------------------------------------------
-# TEST ENVIRONMENT VARIABLES
-# These values are for testing purposes only.
-# "Substitute" is used to prefill or replace values automatically.
-# Do NOT use this file in production environments.
-# ------------------------------------------------------------
+# -----------------------------------------------------------------#
+# TEST ENVIRONMENT VARIABLES                                       #
+# These values are for testing purposes only.                      #
+# "Substitute" is used to prefill or replace values automatically. #
+# Do NOT use this file in production environments.                 #
+# -----------------------------------------------------------------#
 
 DOMAIN_NAME=${DOMAIN_NAME}
 XRAY_PATH=${XRAY_PATH}
