--- a/.github/workflows/xray-warp-ct-staging.yaml
+++ b/.github/workflows/xray-warp-ct-staging.yaml
@@ -35,7 +35,7 @@ jobs:
       XRAY_PATH: xray-warp-test-path
       XRAY_UUID: eefc8f5f-f2fe-43b5-881c-653994d5a617
     secrets:
-      XRAY_HOST: ${{ secrets.XRAY_HOST }}
+      XRAY_HOST: ${{ secrets.DOMAIN_NAME }}
     #needs: [setup-staging-environment]
 
   #destroy-staging-environment:
