--- a/.github/workflows/tls-cert-staging.yaml
+++ b/.github/workflows/tls-cert-staging.yaml
@@ -20,10 +20,14 @@ jobs:
         run: chmod +x ./helpers_scripts/obtain-cert.sh
       - name: "Create tls certificate"
         run: ./helpers_scripts/obtain-cert.sh
+      - name: Allow read on tls cert and key
+        run: |
+          chmod +r /var/snap/lego/common/.lego/certificates/${{ secrets.DOMAIN_NAME }}.crt
+          chmod +r /var/snap/lego/common/.lego/certificates/${{ secrets.DOMAIN_NAME }}.key
       - name: upload tls cert and key
         uses: actions/upload-artifact@v4
         with:
           name: tls-cert-and-key-artifact
           path: |
             /var/snap/lego/common/.lego/certificates/${{ secrets.DOMAIN_NAME }}.crt
-            /var/snap/lego/common/.lego/certificates/${{ secrets.DOMAIN_NAME }}.crt
+            /var/snap/lego/common/.lego/certificates/${{ secrets.DOMAIN_NAME }}.key
