testing the uploading of tls artifacts

--- a/.github/workflows/tls-cert-staging.yaml
+++ b/.github/workflows/tls-cert-staging.yaml
@@ -20,8 +20,8 @@ jobs:
         run: ./helpers_scripts/obtain-cert.sh
       - name: Copy TLS cert and key to workspace
         run: |
-          sudo cp /var/snap/lego/common/.lego/certificates/${{ secrets.DOMAIN_NAME }}.crt > $GITHUB_WORKSPACE/certs 
-          sudo cp /var/snap/lego/common/.lego/certificates/${{ secrets.DOMAIN_NAME }}.key > $GITHUB_WORKSPACE/certs
+          sudo cp /var/snap/lego/common/.lego/certificates/${{ secrets.DOMAIN_NAME }}.crt $GITHUB_WORKSPACE/certs 
+          sudo cp /var/snap/lego/common/.lego/certificates/${{ secrets.DOMAIN_NAME }}.key $GITHUB_WORKSPACE/certs
           sudo chown $USER:$USER $GITHUB_WORKSPACE/certs/*
       - name: upload tls cert and key
         uses: actions/upload-artifact@v4
