testing the uploading of tls artifacts

--- a/.github/workflows/tls-cert-staging.yaml
+++ b/.github/workflows/tls-cert-staging.yaml
@@ -17,16 +17,15 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
       - name: "Create tls certificate"
-        run: ./helpers_scripts/obtain-cert.sh
-      - name: Copy TLS cert and key to workspace
         run: |
+          ./helpers_scripts/obtain-cert.sh
           mkdir -p $GITHUB_WORKSPACE/certs
-          sudo cp /var/snap/lego/common/.lego/certificates/$DOMAIN_NAME.crt $GITHUB_WORKSPACE/certs/ 
-          sudo cp /var/snap/lego/common/.lego/certificates/$DOMAIN_NAME.key $GITHUB_WORKSPACE/certs/
+          sudo cp /var/snap/lego/common/.lego/certificates/$DOMAIN_NAME.crt $GITHUB_WORKSPACE/certs/$DOMAIN_NAME.crt
+          sudo cp /var/snap/lego/common/.lego/certificates/$DOMAIN_NAME.key $GITHUB_WORKSPACE/certs/$DOMAIN_NAME.key
           sudo chown $USER:$USER $GITHUB_WORKSPACE/certs/*
       - name: upload tls cert and key
         uses: actions/upload-artifact@v4
         with:
           name: tls-cert-and-key-artifact
           path: |
-            $GITHUB_WORKSPACE/certs/
+            $GITHUB_WORKSPACE/certs/*
