testing the uploading of tls artifacts

--- a/.github/workflows/tls-cert-staging.yaml
+++ b/.github/workflows/tls-cert-staging.yaml
@@ -28,4 +28,4 @@ jobs:
         with:
           name: tls-cert-and-key-artifact
           path: |
-            $GITHUB_WORKSPACE/certs
+            certs/*
