--- a/.github/workflows/setup-environment-staging.yaml
+++ b/.github/workflows/setup-environment-staging.yaml
@@ -51,3 +51,4 @@ jobs:
       - run: terraform init
       - id: apply
         run: terraform apply --auto-approve
+    needs: [base64-encode-tls-cert-and-key]
