--- a/.github/workflows/xray-warp-ct-staging.yaml
+++ b/.github/workflows/xray-warp-ct-staging.yaml
@@ -3,20 +3,20 @@ name: xray-warp-ct staging CI
 on: workflow_dispatch
 
 jobs:
-  build-staging-image:
-    uses: ./.github/workflows/build-staging.yaml
-    with:
-      DOCKERHUB_USERNAME: xia1997x
-      DOCKERHUB_REGISTRY: xray-warp-staging
-    secrets:
-      DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
+  #build-staging-image:
+  #  uses: ./.github/workflows/build-staging.yaml
+  #  with:
+  #    DOCKERHUB_USERNAME: xia1997x
+  #    DOCKERHUB_REGISTRY: xray-warp-staging
+  #  secrets:
+  #    DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
 
-  reset-staging-environment:
-    uses: ./.github/workflows/destroy-environment-staging.yaml
-    with:
-      CONFIG_DIRECTORY: tests/infrastructure
-    secrets:
-      TF_API_TOKEN: ${{ secrets.TF_API_TOKEN }}
+  #reset-staging-environment:
+  #  uses: ./.github/workflows/destroy-environment-staging.yaml
+  #  with:
+  #    CONFIG_DIRECTORY: tests/infrastructure
+  #  secrets:
+  #    TF_API_TOKEN: ${{ secrets.TF_API_TOKEN }}
 
   setup-staging-environment:
     uses: ./.github/workflows/setup-environment-staging.yaml
@@ -26,7 +26,7 @@ jobs:
       TF_API_TOKEN: ${{ secrets.TF_API_TOKEN }}
       DOMAIN_NAME: ${{ secrets.DOMAIN_NAME }}
       CLOUDFLARE_TOKEN: ${{ secrets.CLOUDFLARE_TOKEN }}
-    needs: [build-staging-image, reset-staging-environment]
+    #needs: [build-staging-image, reset-staging-environment]
 
   check-xray-warp-ct-server-connectivity:
     uses: ./.github/workflows/xray-warp-ct-connectivity-check.yaml
