--- a/.github/workflows/tls-cert-staging.yaml
+++ b/.github/workflows/tls-cert-staging.yaml
@@ -24,6 +24,7 @@ jobs:
           sudo cp /var/snap/lego/common/.lego/certificates/$DOMAIN_NAME.key $GITHUB_WORKSPACE/certs/$DOMAIN_NAME.key
           sudo chown $USER:$USER $GITHUB_WORKSPACE/certs/*
       - name: upload tls cert and key
+        id: get-tls-cert-and-key
         uses: actions/upload-artifact@v4
         with:
           name: tls-cert-and-key-artifact
