--- a/.github/workflows/tls-cert-staging.yaml
+++ b/.github/workflows/tls-cert-staging.yaml
@@ -8,7 +8,7 @@ on: workflow_dispatch
 env:
   CLOUDFLARE_DNS_API_TOKEN: ${{ secrets.CLOUDFLARE_TOKEN }}
   DOMAIN_NAME: ${{ secrets.DOMAIN_NAME }}
-  ACME_ACCOUNT: ${{ secrets.ACME_ACCOUNT }}ok
+  ACME_ACCOUNT: ${{ secrets.ACME_ACCOUNT }}
 
 jobs:
   obtain-tls-certificate:
