--- a/.github/workflows/setup-environment-staging.yaml
+++ b/.github/workflows/setup-environment-staging.yaml
@@ -13,7 +13,7 @@ on:
         required: true
       CLOUDFLARE_TOKEN:
         required: true
-      GITHUB_TOKEN:
+      GH_PAT:
         required: false
 
 jobs:
@@ -31,7 +31,7 @@ jobs:
           name: tls-cert-and-key-artifact
           path: certs
           run-id: get-tls-cert-and-key
-          github-token: ${{ secrets.GITHUB_TOKEN }}
+          github-token: ${{ secrets.GH_PAT }}
       - name: base64 enocde tls_cert and tls_key
         id: tls_cert_and_key_base64_encoded
         run: |
