testing tls workflow

--- a/.gitignore
+++ b/.gitignore
@@ -169,6 +169,7 @@ xray_config/*
 !xray_config/.gitkeep
 !xray_config/xray_core/.gitkeep
 tests/client_config.json
+tests/infrastructure/xray_server_config/config/
 .terraform
 .terraform.*
 .public.env
