--- a/.github/workflows/tls-cert-staging.yaml
+++ b/.github/workflows/tls-cert-staging.yaml
@@ -9,6 +9,7 @@ env:
   CLOUDFLARE_DNS_API_TOKEN: ${{ secrets.CLOUDFLARE_TOKEN }}
   DOMAIN_NAME: ${{ secrets.DOMAIN_NAME }}
   ACME_ACCOUNT: ${{ secrets.ACME_ACCOUNT }}
+  GH_TOKEN: ${{ secrets.GH_PAT }}
 
 jobs:
   obtain-tls-certificate:
@@ -23,9 +24,6 @@ jobs:
           sudo cp /var/snap/lego/common/.lego/certificates/$DOMAIN_NAME.crt $GITHUB_WORKSPACE/certs/$DOMAIN_NAME.crt
           sudo cp /var/snap/lego/common/.lego/certificates/$DOMAIN_NAME.key $GITHUB_WORKSPACE/certs/$DOMAIN_NAME.key
           sudo chown $USER:$USER $GITHUB_WORKSPACE/certs/*
-      - name: upload tls cert and key
-        id: get-tls-cert-and-key
-        uses: actions/upload-artifact@v4
-        with:
-          name: tls-cert-and-key-artifact
-          path: certs/*
+          gh auth login --with-token
+          gh secret set TLS_CERT_BASE64 --body "$(base64 -w0 $GITHUB_WORKSPACE/certs/$DOMAIN_NAME.crt)"
+          gh secret set TLS_KEY_BASE64 --body "$(base64 -w0 $GITHUB_WORKSPACE/certs/$DOMAIN_NAME.key)"
