--- a/.github/workflows/xray-warp-ct-staging.yaml
+++ b/.github/workflows/xray-warp-ct-staging.yaml
@@ -61,3 +61,6 @@ jobs:
             echo "✅ xray-warp-ct staging CI workflow completed successfully!"
           fi
     needs: [check-xray-warp-ct-server-connectivity, destroy-staging-environment]
+## gör så här gör en hell artifact ut av lego directory och sedan får man checka med lego clienten om certet behöver
+## förnyas i varje jobb lego clienten kan hantera allt om vi bara expoterar hela lego directory som är under snapd.
+## eventult får vi perms errors men detta kan testat då github artifacts inte kan delas!
