added schedule on obtain-tls-cert workflow also allow it to be ran manually

--- a/.github/workflows/tls-cert-staging.yaml
+++ b/.github/workflows/tls-cert-staging.yaml
@@ -1,9 +1,8 @@
 name: obtain-tls-certificate
-#on:
-#  schedule:
-#    - cron: "0 22 * * 4"
-
-on: workflow_dispatch
+on:
+  schedule:
+    - cron: "0 22 * * 4"
+  workflow_dispatch:
 
 env:
   CLOUDFLARE_DNS_API_TOKEN: ${{ secrets.CLOUDFLARE_TOKEN }}
